# intent-engine

./: Cargo.toml  README.md  intent.toml  spec.md
.claude/commands/: baseline.md  intent-diff.md  intent-extract.md  intent-fmt.md  intent-gen.md  intent-list.md  intent-new.md  intent-patch.md  intent-show.md  intent-validate.md  intent-verify.md
.github/workflows/: intent.yml
.intent/locks/: gen-manifest.json  obligations.json  trace-map.json
.intent/model/: create-refund-endpoint.intent.json  payments-contract-test.intent.json  payments-service.intent.json  refund-request.intent.json  refund-response.intent.json  refund-workflow.intent.json  refunds-migration.intent.json  testnewtype.intent.json
.intent/schema/: intent-1.0.schema.json  intent-2.0.schema.json
docs/: INSTALLATION.md  QUICK_REFERENCE.md  README.md  error-codes.md
fixtures/invalid/: invalid-map-key.intent.json  missing-type-reference.intent.json
fixtures/valid/: create-refund-endpoint.intent.json  payments-contract-test.intent.json  payments-service.intent.json  refund-request.intent.json  refund-response.intent.json  refund-workflow.intent.json  refunds-migration.intent.json
src/: lib.rs  main.rs
src/cli/: commands.rs  mod.rs
src/codegen/: commands.rs  crate_gen.rs  effects.rs  endpoints.rs  enums.rs  errors.rs  functions.rs  manifest.rs  mod.rs  templates.rs  trace.rs  types.rs  workflows.rs
src/diff/: categories.rs  mod.rs  semantic.rs
src/model/: document.rs  error.rs  (+3 more)
tests/: e2e_tests.rs  integration_tests.rs  snapshot_tests.rs
vscode-extension/: README.md  package.json
(+79 files in other folders)
